Adding test.{include,exclude}.pattern for fine-grained control over tests

--- a/.gitignore
+++ b/.gitignore
@@ -18,3 +18,10 @@ metastore_db
 
 hbase-handler/junit*.properties
 hbase-handler/TempStatsStore/
+
+/hbase-handler/build/
+.broken.rcfile.crc
+broken.rcfile
+/ql/build/
+/serde/build/
+
