--- a/pdk/build.xml
+++ b/pdk/build.xml
@@ -55,6 +55,7 @@
       <property name="hive.install.dir" value="${build.dir.hive}/dist"/>
       <property name="hadoop.home" value="${hadoop.root}"/>
       <property name="build.ivy.lib.dir" value="${build.ivy.lib.dir}"/>
+      <property name="javac.version" value="${javac.version}"/>
     </ant>
     <ant antfile="${build.dir}/test-plugin/build.xml"
          target="test" inheritAll="false" inheritRefs="false">
@@ -62,6 +63,7 @@
       <property name="hadoop.home" value="${hadoop.root}"/>
       <property name="build.ivy.lib.dir" value="${build.ivy.lib.dir}"/>
       <property name="test.hadoop.bin.path" value="${test.hadoop.bin.path}"/>
+      <property name="javac.version" value="${javac.version}"/>
     </ant>
   </target>
 
