Add extra.java.args for unit tests and increase MaxPermSize for hbase-handler

--- a/build.properties
+++ b/build.properties
@@ -100,4 +100,5 @@ datanucleus.repo=http://www.datanucleus.org/downloads/maven2
 
 # JVM arguments
 jvm.args=-XX:-UseSplitVerifier
+extra.jvm.args=
 
