--- a/build.xml
+++ b/build.xml
@@ -370,6 +370,18 @@
     </if>
   </target>
 
+  <target name="echo-running-tests-in">
+    <tstamp>
+      <format property="current.time" pattern="yyyy-MM-dd HH:mm:ss,SSS" />
+    </tstamp>
+
+    <echo/>
+    <echo>-------------------------------------------------------------------------------</echo>
+    <echo>[${current.time}] Running tests in ${file}</echo>
+    <echo>-------------------------------------------------------------------------------</echo>
+    <echo/>
+  </target>
+
   <target name="test" depends="clean-test,jar-test" description="Run tests">
     <echo message="Project: ${ant.project.name}"/>
     <antcall target="test-shims">
@@ -380,11 +392,9 @@
         <fileset dir="." includes="*/build.xml" excludes="ant/*,odbc/*,shims/*"/>
       </path>
       <sequential>
-        <echo/>
-        <echo>-------------------------------------------------------------------------------</echo>
-        <echo>Running tests in @{file}</echo>
-        <echo>-------------------------------------------------------------------------------</echo>
-        <echo/>
+        <antcall target="echo-running-tests-in">
+          <param name="file" value="@{file}"/>
+        </antcall>
         <trycatch>
           <try>
             <ant antfile="@{file}" target="test" inheritAll="false" inheritRefs="true">
