Allow skipping PluginTest

--- a/build.properties
+++ b/build.properties
@@ -102,3 +102,6 @@ datanucleus.repo=http://www.datanucleus.org/downloads/maven2
 jvm.args=-XX:-UseSplitVerifier
 extra.jvm.args=
 
+# Set this to true to avoid running PluginTest
+skip.plugin.test=false
+
