--- a/pdk/build.xml
+++ b/pdk/build.xml
@@ -46,6 +46,7 @@
 
   <target name="test" unless="testcase">
     <echo message="Project: ${ant.project.name}"/>
+    <echo message="skip.plugin.test=${skip.plugin.test}"/>
     <delete quiet="true" dir="${build.dir}/test-plugin"/>
     <copy todir="${build.dir}/test-plugin">
       <fileset dir="${basedir}/test-plugin"/>
@@ -64,6 +65,7 @@
       <property name="build.ivy.lib.dir" value="${build.ivy.lib.dir}"/>
       <property name="test.hadoop.bin.path" value="${test.hadoop.bin.path}"/>
       <property name="javac.version" value="${javac.version}"/>
+      <property name="skip.plugin.test" value="${skip.plugin.test}"/>
     </ant>
   </target>
 
